--- a/notebooks/Iterative Methods.ipynb
+++ b/notebooks/Iterative Methods.ipynb
@@ -373,10 +373,27 @@
     "    A = np.zeros((n, n))\n",
     "    for i in range(n):\n",
     "        # Diagonal entries\n",
-    "        A[i, i] = \n",
+    "        A[i, i] = 1 + dt/dx*u[i]\n",
     "        # Off-diagonal entries\n",
-    "        A[i, i - 1] = \n",
+    "        A[i, i - 1] = -dt/dx*u[i - 1]\n",
     "    return A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, we will require the residual function, given by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def residual(u, dx):\n",
+    "    return -0.5*(u**2 - np.roll(u, 1)**2)/dx"
    ]
   },
   {
@@ -397,18 +414,28 @@
     "    error = 1e16\n",
     "    uk = 1.0*u0\n",
     "    k = 0\n",
-    "    \n",
     "    while (error > ktol) and (k < kmax):\n",
-    "        # Linearize Jacobian about uk\n",
-    "        Ak = \n",
+    "        # Obtain residual at k-th iteration\n",
+    "        rk = residual(uk, dx)\n",
     "        \n",
-    "        # Solve linearized system. \n",
+    "        # Build RHS vector\n",
+    "        b = \n",
+    "        \n",
+    "        # Obtain Jacobian matrix at k-th iteration\n",
+    "        Ak = build_jacobian(uk, dt, dx, n)\n",
+    "        \n",
+    "        # Solve linearized system using inv\n",
+    "        du = \n",
+    "        \n",
+    "        # Obtain solution at k+1-th iteration\n",
     "        ukk = \n",
     "        \n",
-    "        # Compute error from Newton method\n",
-    "        error = l2_error(ukk, u0)\n",
+    "        # Compute error at this iteration\n",
+    "        error = np.max(np.abs(du))\n",
     "        \n",
+    "        uk = ukk\n",
     "        k += 1\n",
+    "        \n",
     "    uf = ukk\n",
     "    return uf"
    ]
@@ -435,7 +462,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "L = \n",
+    "L =\n",
     "n = \n",
     "dt = \n",
     "tf = \n",
@@ -446,7 +473,7 @@
     "niter = int(tf/dt)\n",
     "\n",
     "# Initialize solution\n",
-    "u = \n",
+    "u = np.exp(-40*(x-1/2)**2)\n",
     "\n",
     "# Advance nonlinear problem\n",
     "for i in range(niter):\n",
@@ -489,23 +516,29 @@
     "    uk = 1.0*u0\n",
     "    k = 0\n",
     "    \n",
-    "    # Define b vector in linear system\n",
-    "    b = u0\n",
-    "    \n",
     "    # Define initial guess (vector of zeros)\n",
     "    x0 = \n",
     "    \n",
     "    # Define gauss_seidel tolerance\n",
     "    tol = 1e-12\n",
     "    while (error > ktol) and (k < kmax):\n",
-    "        # Linearize Jacobian about uk\n",
+    "        # Obtain residual at k-th iteration\n",
+    "        rk = residual(uk, dx)\n",
+    "        \n",
+    "        # Build RHS vector\n",
+    "        b = -(uk - u0) + dt*rk \n",
+    "        \n",
+    "        # Compute Jacobian at k-th iteration\n",
     "        Ak = \n",
     "\n",
     "        # Solve linearized system using Jacobi\n",
-    "        ukk, i_jac, err_jac = \n",
+    "        du = \n",
+    "        \n",
+    "        # Obtain solution at k+1-th iteration\n",
+    "        ukk =\n",
     "\n",
     "        # Compute error from Newton method\n",
-    "        error = l2_error(ukk, uk)\n",
+    "        error = np.max(np.abs(ukk-uk))\n",
     "        \n",
     "        # Move on to next iteration\n",
     "        uk = ukk\n",
